# unitree_rl_mjlab

./: .gitignore  .gitmodules  LICENSE  README.md  README_zh.md  main.py  pyproject.toml  setup.py
doc/: setup_en.md  setup_zh.md
mjlab/asset_zoo/robots/: __init__.py
mjlab/asset_zoo/robots/unitree_g1/xmls/: g1.xml
mjlab/asset_zoo/robots/unitree_go2/: go2_constants.py
mjlab/asset_zoo/robots/unitree_go2/xmls/: go2.xml
mjlab/asset_zoo/robots/unitree_h1_2/xmls/: h1_2.xml
mjlab/rsl_rl/runners/: on_policy_runner.py
mjlab/sim/: sim.py
mjlab/tasks/velocity/config/go2/: env_cfgs.py
mjlab/terrains/: config.py
